[package]
name = "liberdus-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
console-subscriber = "0.4.1"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version =  "1.0.215", features = ["derive"] }
tokio-rustls = "0.26.0"
rustls-pemfile = "1.0.0"
serde_json = "1.0.133"
sodiumoxide = "0.2.7"
tokio = { version = "1.16.1", features = ["full"] }
tokio-tungstenite = { version = "0.26.0", features = ["tokio-rustls"] }
futures-util = "0.3.31"
url = "2.5.4"
futures = "0.3.31"
